--- a/TodoApi/appsettings.json
+++ b/TodoApi/appsettings.json
@@ -1,7 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "RollingFile",
+        "Args": {
+          "pathFormat": "C:\\Temp\\log-{Date}.txt",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "TodoApi - Core"
     }
   },
   "AllowedHosts": "*"
